<!-- Sources referenced:
menu: https://developer.android.com/guide/topics/ui/menus
icons: <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from
 <a href="https://www.flaticon.com/" title="Flaticon">Free Vector Icons and Stickers - Thousands of resources to download </a></div>-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/miTasks"
        android:icon="@drawable/list_icon"
        android:title="@string/miTasksStr" />
    <item
        android:id="@+id/miCategories"
        android:icon="@drawable/category_icon"
        android:title="@string/miCategoryStr" />
    <item
        android:id="@+id/miPuzzle"
        android:icon="@drawable/puzzle_icon"
        android:title="@string/miPuzzleStr" />
    <item
        android:id="@+id/miSettings"
        android:icon="@drawable/settings_icon"
        android:title="@string/miSettingsStr" />
</menu>