<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlBaseConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_screen_background"
    tools:context=".CategoriesSetupActivity">

    <TextView
        android:id="@+id/tvChooseCategoriesHeader"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:background="#52856F"
        android:gravity="center"
        android:lineSpacingExtra="20sp"
        android:text="@string/choose_categories"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/flMentalHealth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="25dp"
        android:elevation="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChooseCategoriesHeader">

        <ToggleButton
            android:id="@+id/bvMentalHealth"
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:checked="false"
            android:drawableTop="@drawable/category_mental_health_icon"
            android:onClick="onClickCategory"
            android:text="@string/category_mental_health"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textOff="@string/category_mental_health"
            android:textOn="@string/category_mental_health"
            android:textSize="12sp"
            app:iconPadding="0dp" />

        <ImageView
            android:id="@+id/ivMentalHealthCheckmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:adjustViewBounds="true"
            android:elevation="5dp"
            android:scaleType="fitStart"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_baseline_check_circle_24" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/flSleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="60dp"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChooseCategoriesHeader">

        <ToggleButton
            android:id="@+id/bvCategorySleep"
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:checked="false"
            android:drawableTop="@drawable/category_sleep_icon"
            android:onClick="onClickCategory"
            android:text="@string/category_sleep"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textOff="@string/category_sleep"
            android:textOn="@string/category_sleep"
            android:textSize="12sp"
            app:iconPadding="0dp" />

        <ImageView
            android:id="@+id/ivSleepCheckmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:adjustViewBounds="true"
            android:elevation="5dp"
            android:scaleType="fitStart"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_baseline_check_circle_24" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/flExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="25dp"
        android:elevation="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flMentalHealth">

        <ToggleButton
            android:id="@+id/bvExercise"
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:checked="false"
            android:drawableTop="@drawable/category_exercise_icon"
            android:onClick="onClickCategory"
            android:text="@string/category_exercise"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textOff="@string/category_exercise"
            android:textOn="@string/category_exercise"
            android:textSize="12sp"
            app:iconPadding="0dp" />

        <ImageView
            android:id="@+id/ivExerciseCheckmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:adjustViewBounds="true"
            android:elevation="5dp"
            android:scaleType="fitStart"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_baseline_check_circle_24" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/flFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="60dp"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flSleep">

        <ToggleButton
            android:id="@+id/bvCategoryFood"
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:checked="false"
            android:drawableTop="@drawable/category_food_icon"
            android:onClick="onClickCategory"
            android:text="@string/category_food"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textOff="@string/category_food"
            android:textOn="@string/category_food"
            android:textSize="12sp"
            app:iconPadding="0dp" />

        <ImageView
            android:id="@+id/ivFoodCheckmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:adjustViewBounds="true"
            android:elevation="5dp"
            android:scaleType="fitStart"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_baseline_check_circle_24" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/flMedicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="25dp"
        android:elevation="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flExercise">

        <ToggleButton
            android:id="@+id/bvMedicine"
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:checked="false"
            android:drawableTop="@drawable/category_medicine_icon"
            android:onClick="onClickCategory"
            android:text="@string/category_medicine"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textOff="@string/category_medicine"
            android:textOn="@string/category_medicine"
            android:textSize="12sp"
            app:iconPadding="0dp" />

        <ImageView
            android:id="@+id/ivMedicineCheckmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:adjustViewBounds="true"
            android:elevation="5dp"
            android:scaleType="fitStart"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_baseline_check_circle_24" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/flAssets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="60dp"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flFood">

        <ToggleButton
            android:id="@+id/bvCategoryAssets"
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:checked="false"
            android:drawableTop="@drawable/category_assets_icon"
            android:onClick="onClickCategory"
            android:text="@string/category_assets"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textOff="@string/category_assets"
            android:textOn="@string/category_assets"
            android:textSize="12sp"
            app:iconPadding="0dp" />

        <ImageView
            android:id="@+id/ivAssetsCheckmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:adjustViewBounds="true"
            android:elevation="5dp"
            android:scaleType="fitStart"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_baseline_check_circle_24" />

    </FrameLayout>

    <Button
        android:id="@+id/btnSave"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="162dp"
        android:layout_height="68dp"
        android:layout_marginBottom="50dp"
        android:text="Save"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flAssets" />




</androidx.constraintlayout.widget.ConstraintLayout>